# banknifty-trading-bot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: config.yaml  config_daily.yaml  config_intraday.yaml  config_search.yaml  costs.yaml
config/strategies/: donchian.yaml  ema_trend.yaml  ema_trend_wf.yaml  ensemble.yaml  orb.yaml  regime_filter.yaml  rsi_reversion.yaml  supertrend.yaml  vwap.yaml
dashboard/: app.py
dashboard/pages/: 1_experiment_builder.py  2_results_leaderboard.py  3_data_and_paper.py
docs/: banknifty_bot_plan.md
notebooks/: colab_sweep.ipynb
scripts/: build_ensemble.py  check_data.py  fetch_data.py  generate_report.py  import_bulk_csv.py  paper_trade.py  paper_trade_ensemble.py  resample_intervals.py  run_backtest.py  run_optimization.py  run_sweep.py  wf_search_all.py
src/banknifty_bot/: config.py
src/banknifty_bot/backtest/: costs.py  engine.py  exits.py  portfolio.py  portfolio_ensemble.py  risk.py  runner.py  slippage.py
src/banknifty_bot/data/: bulk_import.py  cleaner.py  store.py
src/banknifty_bot/evaluation/: metrics.py  plots.py  report.py
src/banknifty_bot/features/: filters.py  indicators.py
src/banknifty_bot/optimize/: robustness.py  search.py  walkforward.py
src/banknifty_bot/paper/: broker_base.py  live_loop.py  paper_broker.py  portfolio_paper.py
tests/: test_bulk_import.py  test_costs.py  test_engine.py  test_ensemble.py  test_filters.py  test_indicators.py  test_metrics.py  test_optimize.py  test_paper_broker.py  test_paper_ensemble.py  test_strategies.py
(+16 files in other folders)
