[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banknifty-bot"
version = "0.1.0"
description = "BankNifty intraday rule-based trading bot: backtest, optimize, paper trade."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "yfinance>=0.2.36",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "quantstats>=0.0.62",
    "joblib>=1.3",
    "optuna>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]
sweep = ["vectorbt>=0.26"]  # needs numba/llvmlite; install separately if your toolchain supports it

[tool.setuptools.packages.find]
where = ["src"]
